<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="domoticz_url" translatable="false">http://www.domoticz.com/</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-2210179934394995/9519963928</string>
    <string name="premium_category">Buy premium!</string>
    <string name="premium_title">Get the premium version!</string>
    <string name="restore_title">Restore subscriptions</string>
    <string name="premium_feature">is a premium feature, please buy the paid version to support the developers!</string>
    <string name="old_version">Get the latest version!</string>
    <string name="old_version_description">We are migrating to only one Domoticz Android app.\n\nThis version can still be used with all the premium features, but wil not receive any updates anymore in the future.\n\nYou can export and import your settings via the settings menu.</string>
    <string name="short_description">Domoticz home automation control and monitoring</string>
    <string name="long_description">Control and monitor devices at home (lights, switches, sensors, energy data and more) using the Domoticz home automation system. Automate devices and access them remotely from your Android device.</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="msg_please_wait">Please wait…</string>
    <string name="changelog">Changelog</string>
    <string name="button_state_on">On</string>
    <string name="button_state_off">Off</string>
    <string name="button_state_closed">Closed</string>
    <string name="button_state_open">Open</string>
    <string name="button_state_lock">Lock</string>
    <string name="button_state_unlock">Unlock</string>
    <string name="button_status_log">Log</string>
    <string name="button_status_day">Day</string>
    <string name="button_status_week">Week</string>
    <string name="button_status_month">Month</string>
    <string name="button_status_year">Year</string>
    <string name="button_status_graph">Graph</string>
    <string name="no_data_for_range">No data available for this range</string>
    <string name="set_threshold">Set threshold</string>
    <string name="clear_threshold">Clear threshold</string>
    <string name="action_share">Share</string>
    <string name="compare_previous">Compare prev.</string>
    <string name="threshold_hint">Enter threshold value (0 to clear)</string>
    <string name="threshold_label">Threshold</string>
    <string name="button_status_timer">Timer</string>
    <string name="button_status_notifications">Notifications</string>
    <string name="button_color">Color</string>
    <string name="button_arm">Arm</string>
    <string name="button_disarm">Disarm</string>
    <string name="button_state_full_light">Full light</string>
    <string name="button_state_night">Night light</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="now">Now</string>
    <string name="astrTwilightStart">Astronomical twilight start</string>
    <string name="astrTwilightEnd">Astronomical twilight end</string>
    <string name="civTwilightStart">Civil twilight start</string>
    <string name="civTwilightEnd">Civil twilight end</string>
    <string name="nautTwilightStart">Nautical twilight start</string>
    <string name="nautTwilightEnd">Nautical twilight end</string>
    <string name="last_update">Last seen</string>
    <string name="signal_level">Signal level</string>
    <string name="battery_level">Battery level</string>
    <string name="data">Data</string>
    <string name="hardware">Hardware</string>
    <string name="temperature">Temperature</string>
    <string name="status">Status</string>
    <string name="switch_rgb_wwcolor">RGB color or warm white</string>
    <string name="set_mode">Mode</string>
    <string name="set_point">Set point</string>
    <string name="set_point_min">Set point min value</string>
    <string name="set_point_min_description">Min temperature that you can set for your thermostat</string>
    <string name="set_point_max">Set point max value</string>
    <string name="set_point_max_description">Max temperature that you can set for your thermostat</string>
    <string name="action_success">Action successful</string>
    <string name="action_failed">Action failed</string>
    <string name="action_unknown">Action result unknown</string>
    <string name="choose_status">Choose state</string>
    <string name="normal">Normal</string>
    <string name="economy">Economy</string>
    <string name="away">Away</string>
    <string name="day_off">Day off</string>
    <string name="custom">Custom</string>
    <string name="heating_off">Heating off</string>
    <string name="selector_value">Selector values</string>
    <string name="debug_textview_title">Debugging info</string>
    <string name="msg_copiedToClipboard">Text copied to clipboard</string>
    <string name="favorite">Favorite</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_clear_settings">Are you sure?? This also clears all homescreen widget settings, so you should re-add them afterwards..</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="request_again">Request Again</string>
    <string name="upgrade">UPGRADE</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="no_network_available">Error: No network connection available</string>
    <string name="oops">OOPS!</string>
    <string name="to">"to"</string>
    <string name="retry">Retry</string>
    <string name="undo">Undo</string>
    <string name="something_deleted">%1$s deleted</string>
    <string name="remove_last_server">You can\'t remove the last server in the list.</string>
    <string name="switch_on">Turning switch on</string>
    <string name="switch_off">Turning switch off</string>
    <string name="switch_night">Turning switch to night light</string>
    <string name="switch_full">Turning switch to full light</string>
    <string name="switch_connection_removed">Switch connection removed.</string>
    <string name="blind_up">Turning blind up</string>
    <string name="blind_down">Turning blind down</string>
    <string name="blind_stop">Stop blind</string>
    <string name="filter_on">Filter on</string>
    <string name="filterOn_on">Status on</string>
    <string name="filterOn_off">Status off</string>
    <string name="filterOn_static">Static devices</string>
    <string name="filterOn_all">All devices</string>
    <string name="filter">Filter</string>
    <string name="filter_devices">Filter devices</string>
    <string name="filter_range">Set range</string>
    <string name="filter_graph_empty">Please specify a filter</string>
    <string name="choose_color">Choose color</string>
    <string name="no_data_on_domoticz">No data on Domoticz server</string>
    <string name="row_icon_description">row icon</string>
    <string name="error_image_description">Error image</string>
    <string name="device_image_description">Device image</string>
    <string name="white">White</string>
    <string name="refresh">Refresh</string>
    <string name="domoticz_logo">Domoticz logo</string>
    <string name="this_take_minutes">This could take several minutes.</string>
    <string name="continue_question">Continue?</string>
    <string name="cant_remove_default_server">Can\'t remove the default server</string>
    <string name="restart_required_msg">For the language settings to become to effect an application restart is required</string>
    <string name="filter_all">All</string>
    <string name="filter_normal">Normal</string>
    <string name="filter_status">Status</string>
    <string name="filter_error">Error</string>
    <string name="use_demo_setup">Use demo setup</string>
    <string name="auto_refresh_time">Refresh timer</string>
    <string name="set_auto_refresh_time">Set a specific timer for the auto refresh in seconds.</string>
    <string name="error_authentication_basicauth">IMPORTANT: Please check if your Domoticz system uses Login Page as the authentication method. Basic Auth is going to be removed from Domoticz from next update!</string>
    <string name="category_other">Other</string>
    <string name="tasker_title">Setup automation rules with Tasker for Domoticz</string>
    <string name="category_tasker">Tasker</string>
    <string name="wizard_widgets_tasker">Setup automation rules within Tasker for Domoticz!</string>
    <string name="background_location_warning">This app collects location data to enable for geofencing services within this app, even when the app is closed or not in use.</string>
    <string name="firebase_settings_title">Firebase Configuration</string>
    <string name="firebase_settings">Firebase Settings</string>
    <string name="firebase_settings_description">Configure your own Firebase Cloud Messaging for push notifications. This is required if you\'re running your own Domoticz server.</string>
    <string name="firebase_upload_json">Upload google-services.json</string>
    <string name="firebase_upload_json_description">Download the google-services.json file from your Firebase Console and upload it here to automatically configure FCM.</string>
    <string name="firebase_upload_google_services">Upload google-services.json</string>
    <string name="firebase_manual_config">Manual Configuration</string>
    <string name="firebase_project_id">Project ID</string>
    <string name="firebase_app_id">App ID (mobilesdk_app_id)</string>
    <string name="firebase_api_key">API Key</string>
    <string name="firebase_sender_id">Sender ID (Project Number)</string>
    <string name="firebase_config_saved">Firebase configuration saved</string>
    <string name="firebase_config_cleared">Firebase configuration cleared</string>
    <string name="firebase_config_incomplete">Please fill in all required fields</string>
    <string name="firebase_config_not_configured">Firebase is not configured</string>
    <string name="firebase_clear_config">Clear Configuration</string>
    <string name="firebase_clear_config_confirm">Are you sure you want to clear the Firebase configuration?</string>
    <string name="firebase_test_config">Test Configuration</string>
    <string name="firebase_test_success">Firebase configuration is working! FCM Token: </string>
    <string name="firebase_test_failed">Firebase configuration test failed</string>
    <string name="firebase_restart_required">The app needs to be restarted for the changes to take effect.</string>
    <string name="firebase_json_parsed">Successfully parsed google-services.json file</string>
    <string name="firebase_json_parse_failed">Failed to parse google-services.json</string>
    <string name="save_config">Save Configuration</string>
    <string name="firebase_restart_later">Later</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>
    <string name="restore_backup">Restore from Backup</string>
    <string name="setup_method_title">Choose Setup Method</string>
    <string name="setup_method_subtitle">How would you like to set up your Domoticz server?</string>
    <string name="demo_server">Try Demo Server</string>
    <string name="usage">Usage</string>
    <string name="direction">Direction</string>
    <string name="humidity">Hum</string>
    <string name="speed">Speed</string>
    <string name="rain">Rain</string>
    <string name="co2">CO2</string>
    <string name="co2min">CO2 Min</string>
    <string name="co2max">CO2 Max</string>
    <string name="Lux">Lux</string>
    <string name="Luxmin">Lux Min</string>
    <string name="Luxmax">Lux Max</string>
    <string name="LuxAvg">Lux Avg</string>
</resources>